# N.E.K.O_plugin_py

./: .dockerignore  .env.example  .env.production.example  .gitignore  Caddyfile.prod  Dockerfile.backend  Dockerfile.backend.prod  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  init_data.py  neko-plugin-workspace.code-workspace  pyproject.toml  requirements.txt  root.md  甲方需求.md
AI-Censorship/: root.md
NEKO_Plugins_Market/: .env.example  Dockerfile.frontend.prod  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
NEKO_Plugins_Market/e2e/: market.spec.ts
NEKO_Plugins_Market/src/: App.tsx  index.css
alembic/: env.py
alembic/versions/: 20260502_0001_baseline_schema.py  20260505_0001_fresh_schema.py  20260505_0002_version_trusted_release.py  20260516_0001_market_version_management.py  20260521_0001_user_plugin_installs.py  20260526_0001_auth_hardening.py  20260529_0001_user_plugin_likes.py  20260607_0001_role_levels.py
app/: main.py
app/core/: config.py  crypto.py  (+5 more)
docs/: market-bridge-protocol.md  production-deploy.md
scripts/: backup_sqlite.py  clear_demo_data.py  demo_data.py  dev_compose.sh  dev_reset.py  dev_seed.py  prod_compose.sh  restore_sqlite.py  seed_demo_data.py
tests/: conftest.py  test_admin_permissions.py  test_admin_surface_permissions.py  test_auth.py  test_demo_seed.py  test_me_installs.py  test_plugins.py  test_plugins_and_signatures_permissions.py  test_request_id.py  test_review_workspace.py  test_reviews_versions_permissions.py
(+179 files in other folders)
