[project]
name = "neko-plugin-market"
version = "1.0.0"
description = "N.E.K.O plugin market backend API"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "sqlalchemy==2.0.23",
    "alembic==1.12.1",
    "pydantic==2.5.0",
    "pydantic-settings==2.1.0",
    "email-validator==2.1.0.post1",
    "python-multipart==0.0.6",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "bcrypt==4.0.1",
    "httpx==0.25.2",
    "aiosqlite==0.19.0",
    "cryptography==41.0.7",
]

[dependency-groups]
dev = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "respx==0.20.2",
    "hypothesis==6.108.5",
]

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = ["tests"]
